<resources>
    <!--Activity Name-->
    <string name="kinecosystem_kin_marketplace">Kin Marketplace (Beta)</string>
    <string name="kinecosystem_transaction_history">Transaction History</string>

    <!--Button-->
    <string name="kinecosystem_more">MORE</string>
    <string name="kinecosystem_spend">Spend</string>
    <string name="kinecosystem_earn">Earn</string>
    <string name="kinecosystem_let_s_get_started">Let\'s Get Started!</string>
    <string name="kinecosystem_confirm">Confirm</string>
    <string name="kinecosystem_copy_code">Copy Code</string>

    <!--Sentence-->
    <string name="kinecosystem_kin_balance">Kin Balance</string>
    <string name="kinecosystem_complete_tasks_and_earn_kin">Complete tasks and earn KIN</string>
    <string name="kinecosystem_use_your_kin_to_enjoy_stuff_you_like">Use your KIN to enjoy stuff you like</string>
    <string name="kinecosystem_empty_tomorrow_more_opportunities">Check back tomorrow for more great opportunities</string>
    <string name="kinecosystem_welcome_to_kin">Welcome to Kin!</string>
    <string name="kinecosystem_welcome_kin_info">Kin puts you at the center of your digital life\nby letting you get recognized and rewarded\nfor the time, energy, ideas, opinions,\nand creativity you share online.</string>
    <string name="kinecosystem_digging_for_gems">Digging for Gems…</string>
    <string name="kinecosystem_welcome_to_kin_marketplace">Welcome to Kin Marketplace</string>
    <string name="kinecosystem_something_went_wrong">Oops something went wrong…</string>
    <string name="kinecosystem_earn_pending">Thanks! %s Kin are on the way</string>
    <string name="kinecosystem_spend_pending">Thanks! We\'re generating your code…</string>
    <string name="kinecosystem_earn_completed">Done! %s Kin earned</string>
    <string name="kinecosystem_spend_completed">Great, your code is ready</string>
    <string name="kinecosystem_sorry_this_may_take_some_time">Sorry - this may take some time</string>


    <!--Menu-->
    <string name="kinecosystem_info_menu">Info</string>


</resources>
