<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/kinecosystem_gradient_bg">

    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/kinecosystem_main_margin"
        android:layout_marginLeft="@dimen/kinecosystem_main_margin"
        android:src="@drawable/kinecosystem_ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/kin_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/kinecosystem_main_medium_margin"
        android:src="@drawable/kinecosystem_kin_logo"
        app:layout_constraintBottom_toTopOf="@+id/welcome_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/back_btn"
        app:layout_constraintVertical_bias="1.0"/>

    <TextView
        android:id="@+id/welcome_text"
        style="@style/KinecosysTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kinecosystem_welcome_to_kin"
        android:textColor="@color/kinecosystem_white"
        android:textSize="@dimen/kinecosystem_welcome_text_size"
        app:layout_constraintBottom_toTopOf="@+id/diamond_chest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/welcome_kin_info"
        style="@style/KinecosysSubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/kinecosystem_block_margin"
        android:gravity="center"
        android:lineSpacingExtra="@dimen/kinecosystem_text_line_spacing"
        android:text="@string/kinecosystem_welcome_kin_info"
        android:textColor="@color/kinecosystem_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/diamond_chest"/>

    <ImageView
        android:id="@+id/diamond_chest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/kinecosystem_diamonds_chest"
        app:layout_constraintBottom_toTopOf="@+id/lets_get_started"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75"/>

    <com.kin.ecosystem.splash.view.SplashScreenButton
        android:id="@+id/lets_get_started"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/kinecosystem_bottom_margin"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <TextView
        android:id="@+id/loading_text"
        style="@style/KinecosysSubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kinecosystem_digging_for_gems"
        android:textColor="@color/kinecosystem_white"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lets_get_started"/>


</android.support.constraint.ConstraintLayout>